322 modify delivery controller, create route and routePoint controlles (#327)
* temprorary commit

* modified delivery_controller, added route and route-point controllers

* Revert to UUID. Modified delivery table

* small cleanup

* 322 - remove DeliveryResponse

* 322 - remove RouteResponse

* 322 - remove RoutePointResponse

* 322 - remove shortDtos

Co-authored-by: mbiloshytskyi <belosh59@gmail.com>